<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="prvi_ekran">Ekran Transaction</string>
    <string name="transaction">Transaction</string>
    <string name="drugi_ekran">Ekran Category</string>
    <string name="category">Category</string>
    <string name="treci_ekran">Ekran Settings</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="cetvrti_ekran">Ekran Statistic</string>
    <string name="statistic">Statistic</string>
    <string name="unesi_kategoriju">Unesite Vašu kategoriju</string>
    <string name="spremi">Spremi</string>
    <string name="opis_kategorije">Opis kategorije</string>
    <string name="prikaz">Prikaz</string>
    <string name="dodaj_korisnika">Upiši korisničke podatke</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="lozinka">Lozinka</string>
    <string name="izlaz">Izlaz</string>
    <string name="iznos">Iznos</string>
    <string name="opis">Opis</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="datum">Datum</string>
    <string name="vrieme">Vrijeme</string>
    <string name="kategorija">Kategorija</string>
    <string name="korisnik">Novi korisnik</string>
    <string name="exit">Exit</string>
    <string name="trosak">Unos troška</string>
    <string name="prihod">Unos prihoda</string>
    <string name="racun">Dodaj račun</string>
    <string name="naziv">Naziv računa</string>
    <string name="alarm">Dodaj podsjetnik</string>
    <string name="hello">Bok</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="incomi">Prihodi</string>
    <string name="outcomi">Troškovi</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_proba">ProbaActivity</string>
    <string name="title_activity_active">ActiveActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="guideKorisnik">Kreiraj korisnika</string>
    <string name="popisKorisnika">Popis korisnika</string>
    <string name="popisRacuna">Popis računa</string>
    <string name="stanje">Stanje računa</string>

</resources>
