<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/naslovsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treci_ekran" />

    <Button
        android:id="@+id/btnCloseSettings"
        style="android:buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <Button
        android:id="@+id/btnDodajKorisnika"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dodaj_korisnika" />

    <Button
        android:id="@+id/btn_dodaj_racun"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:text="@string/racun" />

    <Button
        android:id="@+id/btn_dodaj_alarm"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:text="@string/alarm" />

</LinearLayout>


