<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/btnSpremi11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txt_IznosO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/iznos"
        android:inputType="number" >

        <requestFocus android:inputType="number"/>
    </EditText>

    <EditText
        android:id="@+id/txt_OpisO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/opis"
        android:inputType="text" />

    <EditText
        android:id="@+id/txt_DatumO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/datum"
        android:inputType="date" />

    <!-- 
    <EditText
        android:id="@+id/txt_vrijemeO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/vrieme"
        android:inputType="time" />
 -->

    <DigitalClock
        android:id="@+id/vrijemeTroska"
        android:layout_width="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:text="DigitalClock" />


    <Spinner
        android:id="@+id/spin_KategorijaO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/kategorija"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spin_KorisnikO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/kategorija"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_Spremi11"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/spremi" />

    <Button
        android:id="@+id/btn_Izlaz1"
       android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/izlaz" />

    <!--  
    <Button
        android:id="@+id/btn_prikaz"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/prikaz" />

-->
</LinearLayout>
