<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textViewUnesiKategoriju"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/unesi_kategoriju"
        android:textSize="25sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editTextUnesi_Kategoriju"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUnesiKategoriju"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewOpisKategorije"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUnesi_Kategoriju"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/opis_kategorije"
        android:textSize="25sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editTextOpisKategorije"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewOpisKategorije"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="textPostalAddress" >
    </EditText>

    <Button
        android:id="@+id/btnSpremiKategoriju"
        style="@style/button_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextOpisKategorije"
        android:layout_alignLeft="@+id/editTextOpisKategorije"
        android:layout_alignRight="@+id/editTextOpisKategorije"
        android:layout_alignStart="@+id/editTextOpisKategorije"
        android:layout_below="@+id/editTextOpisKategorije"
        android:layout_marginTop="18dp"
        android:background="@drawable/green_button"
        android:text="@string/spremi"
        android:textSize="18sp" />

</RelativeLayout>